# diem

common/workspace-hack/: Cargo.toml
crypto/crypto/: Cargo.toml
language/move-prover/interpreter/: Cargo.toml
types/: Cargo.toml
