[package]
name = "diem-workspace-hack"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem workspace hack"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

### BEGIN HAKARI SECTION

# Disabled through `cargo x generate-workspace-hack --mode disable`.
# To re-enable, `run cargo x generate-workspace-hack`.

### END HAKARI SECTION
